<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background3android">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="10">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/gg">

                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/switchh"
                    android:textSize="30dp"
                    android:id="@+id/textView3" />
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/switchhtext"
                    android:textSize="15dp"
                    android:layout_below="@+id/textView3"
                    />

                <Switch
                    android:id="@+id/mySwitch"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mySwitch"

                >

                <com.q42.android.scrollingimageview.ScrollingImageView
                    android:id="@+id/scrolling_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    scrolling_image_view:speed="1dp"
                    scrolling_image_view:src="@drawable/scrolling_background" />

                <com.q42.android.scrollingimageview.ScrollingImageView
                    android:id="@+id/scrolling_foreground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    scrolling_image_view:speed="2.5dp"
                    scrolling_image_view:src="@drawable/scrolling_foreground" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:src="@drawable/van" />
            </FrameLayout>







            <RelativeLayout

                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/mostrecent"
                android:textSize="30dp"
                android:id="@+id/textmostrecent"
                android:layout_centerVertical="true" />




            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/img"
                android:layout_below="@+id/textmostrecent"/>
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/textmostrecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/img">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvType"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvExistance"
                        android:layout_below="@+id/tvType"
                        android:textStyle="bold"/>
                </LinearLayout>
            </RelativeLayout>





        </LinearLayout>
    </FrameLayout>
</io.codetail.widget.RevealFrameLayout>